# smart_tensor

./: .debug.py  .gitignore  Cargo.toml  README.md
...src/: main.rs
...src/data/: impl_data.rs  impl_data_empty.rs  impl_data_full.rs  mod.rs
...src/tensor/: mod.rs
..src/: main.rs
..src/data/: impl_empty_data.rs
..src/stride/: mod.rs
..src/traits/: tensor.rs
.src/: main.rs
.src/tensor/macros/: impl_empty.rs  impl_view.rs  make_aliases.rs  mod.rs
.src/traits/: data.rs  mod.rs  tensor.rs  tensor_full.rs  tensor_view.rs
src/: main.rs  stride.rs
src/data/: impl_as_mut_ref.rs  impl_as_ref.rs  impl_data.rs  impl_data_empty.rs  impl_data_full.rs  impl_data_trait.rs  impl_full_data.rs  impl_full_like_data.rs  mod.rs
src/macros/: mod.rs  shape_numel.rs
src/stride/: def_all.rs  impl_all.rs  mod.rs
src/tensor/: aliases.rs  def_aliases.rs  impl_attrs.rs  impl_empty.rs  impl_flatten.rs  impl_new.rs  impl_tensor.rs  impl_views.rs  make_aliases.rs  make_tensor.rs  mod.rs
src/tensor/macros/: def_attrs.rs  def_new.rs  impl_attrs.rs  impl_full.rs  impl_new.rs  make_tensor.rs  mod.rs
src/tensor/ops/: mod.rs
src/traits/: data.rs  mod.rs  tensor.rs  tensor_attrs.rs  tensor_empty.rs
