[package]
name = "smart_tensor"
version = "0.0.1"
authors = ["Thales F. D. Fernandes"]
edition = "2021"
readme = "README.md"
keywords = ["tensor", "array"]
repository = "https://github.com/tfernd/smart_tensor"
# description = ""
# documentation = ""
# license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2.14"
